# DyMath

./: .gitignore  CMakeLists.txt  README.md
Include/Math/Common/: TGlobalTypes.h  XGlobalMacroes.h  XGlobalUtilites.h  XRemoveMacroes.h  XRttrEntry.h
Include/Math/Common/Inline/: TGlobalTypes.inl
Include/Math/Common/Inline/TGlobalTypes/: TTypeListOf.inl  TValueCategory.inl
Include/Math/Common/Inline/XGlobalUtilities/: GetBiggerType.inl  GetCoverableTypeOf.inl  GetRealTypeOf.inl  XGlobalUtilities.inl
Include/Math/Type/Color/: DColorRGB.h  DColorRGB24.h  DColorRGBA.h  DColorRGBA32.h
Include/Math/Type/Inline/DArea2D/: DArea2DInt.inl  DArea2DReal.inl
Include/Math/Type/Inline/DArea3D/: DArea3DInt.inl  DArea3DReal.inl
Include/Math/Type/Inline/DBounds2D/: DBounds2DCommon.inl  DBounds2DInt.inl  DBounds2DReal.inl
Include/Math/Type/Inline/DBounds3D/: DBounds3D.inl  DBounds3DCommon.inl  DBounds3DInt.inl  DBounds3DReal.inl
Include/Math/Type/Inline/DClamp/: DClamp.inl  DClampOperator.inl  DClampRttr.inl
Include/Math/Type/Inline/DColor/: DColorRGB.inl  DColorRGB24.inl  DColorRGBA.inl  DColorRGBA32.inl
Include/Math/Type/Inline/DGrid2D/: DDynamicGrid2D.inl  DGridXIterator.h  DGridYIterator.h  DGridYSubscript.h
Include/Math/Type/Inline/DMatrix2/: DMatrix2.inl  DMatrix2Operator.inl
Include/Math/Type/Inline/DMatrix3/: DMatrix3.inl  DMatrix3Operator.inl
Include/Math/Type/Inline/DMatrix4/: DMatrix4.inl  DMatrix4Operator.inl
Include/Math/Type/Inline/DPlane/: DPlane.inl
Include/Math/Type/Inline/DQuat/: DQuat.inl
Include/Math/Type/Inline/DRay/: DRay.inl
Include/Math/Type/Inline/DSphere/: DSphere.inl
Include/Math/Type/Inline/DVector2/: DVector2Common.inl  DVector2Int.inl  DVector2Real.inl
Include/Math/Type/Inline/DVector3/: DVector3Common.inl  DVector3Int.inl  DVector3Real.inl
Include/Math/Type/Inline/DVector4/: DVector4Common.inl  DVector4Int.inl  DVector4Real.inl
Include/Math/Type/Inline/DVector4/Simd/: DVector4TF32.inl  DVector4TF32Common.inl  DVector4TI32.inl  DVector4TI32Common.inl
Include/Math/Type/Inline/Micellanous/: DTristateBool.inl
Include/Math/Type/Inline/XShape/: DBox.inl  DCapsule.inl  DCone.inl  DPlane.inl  DTorus.inl
Include/Math/Type/Math/: DMatrix2.h  DMatrix3.h  DMatrix4.h  DQuat.h  DVector2.h  DVector3.h  DVector4.h  EAxis.h
Include/Math/Type/Micellanous/: DArea2D.h  DArea3D.h  DBounds2D.h  DBounds3D.h  DClamp.h  DDynamicGrid2D.h  DTristateBool.h  DUuid.h  EGraphics.h  EProjection.h  ERandomPolicy.h
Include/Math/Type/Shape/: DBox.h  DCapsule.h  DCone.h  DPlane.h  DRay.h  DSphere.h  DTorus.h
Include/Math/Utility/: XBoost.h  XColor.h  XGraphicsMath.h  XLinearMath.h  XMath.h  XMathTrigonometry.h  XRandom.h  XShapeMath.h
Include/Math/Utility/Inline/: XBounds3DMath.inl  XGraphicsMath.inl  XLinearMath.inl  XMathTrigonometry.inl  XRandom.inl  XShapeMath.inl  XVectorMath.inl
Include/Math/Utility/Inline/XMath/: Abs.inl  IsNearlyEqual.inl  Lerp.inl  MapValue.inl  MinMax.inl  ToNormalized.inl
Source/Math/Common/: XRttrEntry.cc
Source/Math/Type/Micellanous/: DUuid.cc
Source/Utility/: XBoost.cc  XMath.cc
